--- a/views/register.html
+++ b/views/register.html
@@ -1,11 +1,13 @@
 
-<div class="container" ng-controller="RegisterController as register">
+<div class="container" ng-controller="RegisterController ">
     <h2>Enter your information</h2>
-    <form class="regiterForm" ng-submit="addAccount">
-      <div class="form-group ">
-        <label  for="clientName">Full name</label>
-        <input type="text" class="form-control input-lg" id="clientName" ng-model="newAct.clientName" placeholder="example: Luis Sandino Ruiz">
-      </div>
+    <form class="regiterForm" ng-submit="addUser()">
+    <div class="form-group ">
+          <label for="clientName">Choose an user name</label>
+          <select class="form-control input-lg" ng-model="name" id="name" ng-options="uName for uName in name">
+          </select>
+      </div>   
+      
       <div class="form-group ">
           <label for="accountType">Type of account</label>
           <select class="form-control input-lg" ng-model="inAccountType" ng-options="item for item in accountsType">
@@ -17,16 +19,10 @@
       </div>
 
       <div class="form-group ">
-          <button type="text" ng-click="add(new)"   class="btn btn-default btn-lg">Submit Information</button>
+          <button type="text"    class="btn btn-default btn-lg">Submit Information</button>
       </div>
       
     </form>
-<ul class="list-group">
-          <li class="list-group-item unstyled" ng-repeat="theAccount in account">
-            <span  >{{theAccount.clientName}} </span>
-          
-          </li>
-          
-        </ul>
+
 </div>
         
