--- a/views/summary.html
+++ b/views/summary.html
@@ -1,15 +1,13 @@
 <div class="container" ng-controller="SummaryController">
 	<div class="panel  ">
 	  <div class="panel-heading">
-	    <h1>Hello {{newAccount.nombre}}!</h1>
-		<h3>These are your last 10 transactions on your {{tipoCuenta}} account</h3>
+	    <h1>Hello{{name}}!</h1>
+		<h3>These are your last 10 transactions on your {{accountsType}}</h3>
 
 	  </div>
 	  <div class="panel-body">
 	   
-
-	   
-			<table class="table table-striped" >
+			<table class="table " >
 			    <thead >
 			      <tr>
 			        <th>Date</th>
@@ -18,17 +16,17 @@
 			      </tr>
 			    </thead>
 	   			<tbody >
-				 	<tr ng-repeat="team in teams">
-					    <td></td>
-					    <td></td>
-					    <td></td>
+				 	<tr ng-repeat="movement in movements">
+					    <td> {{movement.date |date}}</td>
+					    <td>{{movement.description}}</td>
+					    <td>{{movement.amount | currency}}</td>
 			    	</tr>
 			    	
 	         	 </tbody>
 	         	 <tfoot>
 			      <tr>
 			        <td colspan="2">Saldo actual</td>
-			        <td colspan="1"></td>
+			        <td colspan="1" >{{newAmount}}</td>
 			        
 			      </tr>
 			    </tfoot>
